Conclusion of testing all endpoints and making code adjustments based on the test results.

--- a/EcoLudicoAPI.csproj
+++ b/EcoLudicoAPI.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Controllers\UserController.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
